<resources>
    <string name="app_name">Enigmatica</string>
    <string name="todo">TODO</string>
    <string name="Version">Версия 0.1.0</string>

    <string name="md4_Tittle">MD4 (Message Digest 4)</string>
    <string name="md4_Description">Криптографическая хеш-функция,\nразработанная профессором\nМассачусетского университета\nРональдом Ривестом в 1990 году, и\nвпервые описанная в RFC 1186. Дл\nпроизвольного входного сообщения\nфункция генерирует 128-разрядное\nхеш-значение, называемое дайджестом\nсообщения. Этот алгоритм используется\nв протоколе аутентификации\nMS-CHAP, разработанном корпорацией\nМайкрософт для выполнения процедур\nпроверки подлинности удаленных\nрабочих станций Windows. Является\nпредшественником MD5.</string>

    <string name="md5_Tittle">MD5 (Message Digest 5)</string>
    <string name="md5_Description">128-битный алгоритм хеширования,\nразработанный профессором Рональдом\nРивестом из Массачусетского\nтехнологического института\n(Massachusetts Institute of Technology,\nMIT) в 1991 году. Предназначен для\nсоздания «отпечатков» или дайджестов\nсообщения произвольной длины и\nпоследующей проверки их подлинности.\nШироко применялся для проверки\nцелостности информации и хранения\nхешей паролей.</string>

    <string name="sha1_Tittle">SHA-1\n(Secure Hash Algorithm)</string>
    <string name="sha1_Description">Алгоритм криптографического хеши-\nрования. Для входного сообщения произ-\nвольной длины алгоритм генерирует\n160-битное (20 байт) хеш-значение,\nназываемое также дайджестом сообще-\nния, которое обычно отображается как\nшестнадцатеричное число длиной в 40\nцифр. Используется во многих криптогра-\nфических приложениях и протоколах.\nТакже рекомендован в качестве основ-\nного для государственных учреждений в\nСША. Принципы SHA-1 аналогичны тем,\nкоторые использовались Рональдом\nРивестом при проектировании MD4.</string>

    <string name="sha2_Tittle">SHA-2\n256 byte Version</string>
    <string name="sha2_Description">Хеш–функции SHA–2 разработаны\nАгентством национальной безопасности\nСША и опубликованы Национальным\nинститутом стандартов и технологий\nв федеральном стандарте обработки\nинформации FIPS PUB 180–2 в августе\n2002 года. В марте 2012 года вышла\nпоследняя на данный момент редакция\nFIPS PUB 180–4, в которой были\nдобавлены функции SHA-512/256 и\nSHA-512/224, основанные на SHA-512\n(поскольку на 64-битных архитектурах\nSHA-512 работает быстрее,\nчем SHA-256).</string>

    <string name="highway_Tittle">HighwayHash 256</string>
    <string name="highway_Description">Это хэш/псевдослучайная функция\nс быстрым вводом ключей,\nразработанная Юрки Алакуйала и\nЯном Вассенбергом. Заявленные цели\nразработки — высокопроизводительное\nсмешивание и недорогая доработка. C\nоткрытым исходным кодом (лицензия\nApache 2) Эталонная реализация\nбыла опубликована в марте 2016 года.\nHighwayHash вычисляет 256-битные\nдайджесты входных данных переменной\nдлины, используя 256-битное начальное число/ключ.</string>

    <string name="ToBeContinue_Tittle">Скоро!</string>
    <string name="ToBeContinue_Description">Ждите новых обновлений приложения\nчтобы увидеть больше различных\nдополнительных функций. Вся\nинформация о разработке и открытый\nисходный код вы можете узнать на\nофициальном репозитории GitHub!\nОтсканируйте QR-код или нажмите на\nнего чтобы перейти по ссылке.</string>

    <string name="Instruction_Tittle">Инструкция использования:</string>
    <string name="MS_Instruction_Desc">Для хеширования параметра однонаправленной функцией вам необходимо ввести хешируемую строку (value) и нажать на кнопку "Хэшировать". На возврат вы получите хэш-строку.  Также вы можете дополнительно получть ссылку запроса к серверу. Для этого поставьте галочку в соответстующем поле.</string>
    <string name="highway_Instruction_Desc">Для хеширования параметра псевдослучайной функцией вам необходимо ввести хешируемую строку (value) и ключ (key), далее нажмите на кнопку "Хэшировать". Вы можете оставить поле ключа (key) пустым, в таком случае ключ сгенерируется случайным образом. На возврат вы получите хэш-строку и hex-ключ для определения процедуры. Также вы можете дополнительно получть ссылку запроса к серверу. Для этого поставьте галочку в соответстующем поле.</string>

    <string name="Input_Hash_string">Введите хеш-строку (value)</string>
    <string name="Input_Key_string">Введите хеш-ключ (key) или оставьте поле пустым</string>

    <string name="Output_Hash_string">Хеш-сторка</string>
    <string name="Output_Key_string">Ключ</string>
    <string name="Output_Link">Ссылка запроса</string>

    <string name="Hint_Hash_string">Цыган на цыпочках подошел к цыпленку и цыкнул: «Цыц!».</string>
    <string name="Hint_Key_string">HEX-формат (длина - 32 байта)</string>

    <string name="Get_Link">Получть ссылку запроса</string>
    <string name="Hash">Хэшировать</string>
    <string name="Copy">Копировать</string>
    <string name="Out_Connection">Отсутствует подключение к серверу. Поторите попытку позже.</string>

</resources>